--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h2 class ="heading"> About <span>Me</span></h2>
         <h3>UX Researcher/Designer</h3>
         <p> Step into my digital realm, where creativity meets precision in the intricate world of user experience. Explore my portfolio, a testament to my commitment to crafting captivating, user-centric designs that transcend expectations, redefining the essence of seamless digital interaction with data-informed decisions.</p>
-        <a href="#" class="btn">Read More</a>
+        <a href="about.html" class="btn">Read More</a>
       </div>
     </section>
 
