--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <!-- custom css -->
     <link rel="stylesheet" href="css/style2.css" />
 
+
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FZYDEF3KX2"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0TRRZV1V40"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-FZYDEF3KX2');
+      gtag('config', 'G-0TRRZV1V40');
     </script>
-
   </head>
 
  
