--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <a href="#" class="btn" download="ResumeUX.pdf">R&eacute;sum&eacute;</a>
       </div>
         <div class = "home-img">
-          <img src="images/home.png" alt="">
+          <img src="images/new.jpg" alt="">
         </div>
     </section>
 
@@ -88,7 +88,7 @@
           <div class="portfolio-layer">
             <h4>Orchestrating Spotify’s Future Tune </h4>
             <p>Navigating from Insights to Brief</p>
-            <a href = "https://medium.com/@pbharti_59193/orchestrating-spotifys-future-tune-navigating-from-insights-to-brief-20e62ea388de"><i class='bx bx-link-external'></i></a>
+            <a href = "https://www.figma.com/proto/m33XF6W1iArySkqaDLHRZL/Portfolio?page-id=0%3A1&type=design&node-id=3-10&viewport=-474%2C282%2C0.18&t=SLKsdYhLycbgqRIQ-1&scaling=scale-down-width&mode=design"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
@@ -153,6 +153,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
     <!-- custom js -->
+    <script src="js/script2.js"></script>
     <script src="js/script2.js"></script>
   </body>
 </html>
