--- a/about.html
+++ b/about.html
@@ -4,35 +4,56 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vCard - Personal Portfolio</title>
+    <title>About- Pearl Bharti</title>
 
-    <!--
-    - favicon
-  -->
+    <title>Home- Pearl Bharti</title>
+        <link rel="icon" href="images/favicon.png">
+
+    <!-- box icons -->
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+
     <link
-      rel="shortcut icon"
-      href="./assets/images/logo.ico"
-      type="image/x-icon"
-    />
-
-    <!--
-    - custom css link
-  -->
-    <link
-      rel="stylesheet"
-      href="./css/style.css"
-    />
-
+    rel="stylesheet"
+    href="./css/style.css"
     <!--
     - google font link
-  -->
+    -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
       rel="stylesheet"
-    />
+/>
+</head>
+
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0TRRZV1V40"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-0TRRZV1V40');
+    </script>
   </head>
+
+ 
+
+  <body>
+    <!-- header design -->
+    <header class = "header">
+      <a href = "#" class= "logo"> PB.</a>
+
+      <i class ='bx bx-menu' id ="menu-icon"></i>
+
+      <nav class = "navbar">
+        <a href = "#home" class = "active">Home</a>
+        <a href = "#about" class = "active">About</a>
+        <a href = "#portfolio" class = "active">Portfolio</a>
+        <a href = "#contact" class = "active">Contact</a>
+      </nav>
+    
 
   <body>
     <!--
