--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a href="https://www.linkedin.com/in/pearl-b-a702491a9/"><i class='bx bxl-linkedin-square'></i></a>
           <a href="https://medium.com/@pbharti_59193"><i class='bx bxl-medium-square'></i></a>
         </div>      
-        <a href="#" class="btn" download="ResumeUX.pdf">R&eacute;sum&eacute;</a>
+        <a href="https://drive.google.com/file/d/1nfqzj7PmNzYg2D1izXVqrcSnjVhRqTRn/view?usp=sharing" class="btn" download="resume.pdf">R&eacute;sum&eacute;</a>
       </div>
         <div class = "home-img">
           <img src="images/new.jpg" alt="">
@@ -71,9 +71,9 @@
       </div>
 
       <div class="about-content">
-        <h2 class ="heading"> About <span>Me</span></h2>
+        <h2 class ="heading"> Hi, it's <span>Me!</span></h2>
         <h3>UX Researcher/Designer</h3>
-        <p> Step into my digital realm, where creativity meets precision in the intricate world of user experience. Explore my portfolio, a testament to my commitment to crafting captivating, user-centric designs that transcend expectations, redefining the essence of seamless digital interaction with data-informed decisions.</p>
+        <p>Explore my portfolio, a testament to my commitment to crafting captivating, user-centric designs that transcend expectations, redefining the essence of seamless digital interaction with data-informed decisions.</p>
         <a href="about.html" class="btn">Read More</a>
       </div>
     </section>
@@ -121,7 +121,7 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me!</span></h2>
 
-      <form action="#">
+      <form action="mailto:pbharti@wisc.edu">
         <div class="input-box">
           <input type="text" placeholder="Full Name">
           <input type="email" placeholder="Email Address">
