--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   
     <!-- contact section design -->
     <section class="contact" id="contact">
-      <h2 class="heading">Contact <span>Me!</span></h2>
+      <h2 class="heading">Let's <span>talk!</span></h2>
 
       <form action="mailto:pbharti@wisc.edu">
         <div class="input-box">
