--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h2 class ="heading"> Hi, it's <span>Me!</span></h2>
         <h3>UX Researcher/Designer</h3>
         <p>Explore my portfolio, a testament to my commitment to crafting captivating, user-centric designs that transcend expectations, redefining the essence of seamless digital interaction with data-informed decisions.</p>
-        <a href="about.html" class="btn">Read More</a>
+        <a href="#" class="btn">Read More</a>
       </div>
     </section>
 
@@ -88,7 +88,7 @@
           <div class="portfolio-layer">
             <h4>Orchestrating Spotify’s Future Tune </h4>
             <p>Navigating from Insights to Brief</p>
-            <a href = "https://www.figma.com/proto/m33XF6W1iArySkqaDLHRZL/Portfolio?page-id=0%3A1&type=design&node-id=3-10&viewport=-474%2C282%2C0.18&t=SLKsdYhLycbgqRIQ-1&scaling=scale-down-width&mode=design"><i class='bx bx-link-external'></i></a>
+            <a href = "spotify.html"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
