--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>      
         <a href="https://drive.google.com/file/d/1nfqzj7PmNzYg2D1izXVqrcSnjVhRqTRn/view?usp=sharing" class="btn" download="resume.pdf">R&eacute;sum&eacute;</a>
       </div>
-        <div class = "home-img">
+        <div class = "homeimg">
           <img src="images/new.jpg" alt="">
         </div>
     </section>
@@ -95,9 +95,9 @@
         <div class ="portfolio-box">
           <img src="images/portfolio2.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p> Kuch likh fir se</p>
-            <a href = "#"><i class='bx bx-link-external'></i></a>
+            <h4>Sustainability Redesign</h4>
+            <p> Employing UX to make sustainable effort a pleasant experience</p>
+            <a href = "Upshift.html"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
