--- a/Upshift.html
+++ b/Upshift.html
@@ -95,7 +95,6 @@
         <nav class = "navigation-bar">
           <a href = "index.html" class = "active">Home</a>
           <a href = "#" class = "active">About</a>
-          <a href = "#portfolio" class = "active">Portfolio</a>
           <a href = "#contact" class = "active">Contact</a>
         </nav>
   
@@ -105,7 +104,7 @@
         <div class="container"><img src="https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d33aed5a2c133cfd6f6663_FaveSEA_01.webp" loading="lazy" srcset="https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d33aed5a2c133cfd6f6663_FaveSEA_01-p-500.webp 500w, https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d33aed5a2c133cfd6f6663_FaveSEA_01-p-800.webp 800w, https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d33aed5a2c133cfd6f6663_FaveSEA_01-p-1080.webp 1080w, https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d33aed5a2c133cfd6f6663_FaveSEA_01.webp 2000w"
                 sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 92vw, 78vw" alt="Upshift Swap Shop" class="cs-cover-image" /></div>
         <div class="mw-650 w-container">
-            <h1>Increasing app installs by 600% on Fave&#x27;s new landing page</h1>
+            <h1> Revolutionizing Retail: Redesigning Thrift Store's UX for Sustainable Impact</h1>
             <div class="w-layout-grid cs-overview">
                 <div>
                     <div class="caption all-caps">Timeline</div>
@@ -142,9 +141,6 @@
             <a href="#goal" class="cs-side-nav w-inline-block">
                 <div>Goal</div>
             </a>
-            <a href="#impact" class="cs-side-nav w-inline-block">
-                <div>Impact</div>
-            </a>
             <a href="#early-ideation" class="cs-side-nav w-inline-block">
                 <div>Brainstorming</div>
             </a>
@@ -175,14 +171,14 @@
                 <div class="mw-650">
                     <h2>Introduction</h2>
                     <div class="styled-rich-text w-richtext">
-                        <p>Fave is Southeast Asia&#x27;s fastest growing fintech platform that helps consumers save, while FaveBiz helps merchants grow their business. In the new landing page, we set out to solve the problems below within 1.5 months. The
-                            results were amazing.</p>
-                        <p>‍<br/></p>
+                        <p>Arriving in the US from warm India, I wasn't ready for Wisconsin's cold. As a student, I needed affordable warmth without supporting fast fashion. Upshift, Madison's swap shop, became my go-to. Their focus on sustainability and community inspired me to redesign their website, eager to help their cause thrive</p>
                     </div>
+                    <br>
+                    <br>
+                    <br>
                     <h2>My Role</h2>
                     <div class="styled-rich-text w-richtext">
-                        <p>I led the design, user testing and development of this project from end to end. I collaborated with 2 product designers (<a href="https://www.linkedin.com/in/estherkoon/" target="_blank">Esther</a>, <a href="https://www.linkedin.com/in/archie-t-89706b15b/"
-                                target="_blank">Archie</a>) during the early ideation stage and the lead product manager (<a href="https://www.linkedin.com/in/laurin-stahl/" target="_blank">Laurin</a>) throughout the entire project.<br/></p>
+                        <p>I have been the UX designer for this project. Starting at my preliminary research, brainstorming and all the design steps,with wonderful guidance from my Professor <a href="https://www.linkedin.com/in/adamrule/" target="_blank">Adam Rule</a>, I have been able to enhance the User Experience of the website. </p>
                     </div>
                 </div>
             </div>
@@ -190,35 +186,38 @@
                 <div class="mw-650">
                     <h2>Problem</h2>
                     <div class="styled-rich-text w-richtext">
-                        <p>Today, over 90% of our users are on the Fave mobile app. Due to the low usage, we never prioritized improving on or building new features for the website.</p>
-                        <p>‍</p>
-                        <h3>The old landing page is outdated.</h3>
-                        <p>It has not gone through a redesign for 4 years. The design language is not consistent with the app. The old landing page shows Fave Deals only, visitors do not see other product offerings like eCards, FavePay.</p>
-                        <p>‍<br/></p>
-                        <h3>Fave does not have an official company page.</h3>
-                        <p>Since the Groupon days, Fave has not set up a corporate page to communicate what our company is about, to our investors, merchants and consumers.</p>
-                        <p>‍</p>
-                        <h3>The existing app download metrics could be improved.</h3>
-                        <p>We want to drive more app downloads since our main product focus is on the app. In Indonesia, our consumers mostly use Fave via the mobile web browser. We wish to convert web users to the app so they enjoy a better experience.<br/></p>
+                        <p>Since 2013, Upshift's web user experience has not been changed. The current website just doesn't capture the vibrant energy of the store. It's lacking in fun, color, and that unique vibe Upshift brings. With its outdated landing page and minimal info, there's zero chance for online shopping. As a result, the store hasn't been getting the attention it deserves. That's why I made it my mission to revamp the site, focusing on improving the user experience and adding exciting new features.</p>
                     </div>
                 </div>
+                <div class="mw-650">
+                    <div class="styled-rich-text w-richtext">
+                        <p>‍</p>
+                        <p>‍</p>
+                        <h3>Defining the problem<br/></h3>
+                    </div>
+                </div>
+                <div class="mw-650"><img src="images\hmw.png" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 88vw, 650px" alt="problem statement" class="cs-image" /></div>
             </div>
             <div id="goal" class="cs-offset-section">
                 <div class="mw-650">
-                    <h2>Goal</h2>
+                    <h2>Goals</h2>
+                    <div class="caption">BUSINESS GOALS</div>
                     <div class="styled-rich-text w-richtext">
-                        <h3>Communicate Fave&#x27;s value proposition</h3>
-                        <p>To give clearer messaging. Throughout the years, our products have scaled beyond Deals.</p>
-                        <p><br/></p>
-                        <h3>Drive app downloads</h3>
-                        <p>Today, over <strong>90% of our users are on the Fave mobile app,</strong> but we still maintain our web presence for the remaining 10% users. We want to convert users from web to app, so that they enjoy a better experience, and
-                            we could focus our resources on the app instead of maintaining several platforms.</p>
+                        <h3>Strengthen the value proposition of core products</h3>
+                        <p>With new products introduced, we want to highlight our core product offerings that go beyond Deals. We aim to allow a habit-building &amp; fast payment experience for our consumers, while strengthening product discovery on the
+                            app.</p>
                         <p>‍</p>
-                        <h3>Drive merchants to FaveBiz</h3>
-                        <p>To attract potential merchants who wants to use FaveBiz to grow their business.</p>
-                        <p>‍</p>
-                        <h3>Drive job seekers to Careers page</h3>
-                        <p>To entice potential candidates who would like to join the Fave family.</p>
+                        <h3>Operational efficiency</h3>
+                        <p>To optimize internal operations, we will build scalable design components, which will work across FavePay, Deals &amp; eCards.<br/></p>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="caption">USER GOALS</div>
+                    <div class="styled-rich-text w-richtext">
+                        <h3>Increase content relevancy</h3>
+                        <p>To work with the data science and engineering team to build a recommendation engine that automatically shows consumers the most relevant content based on their past purchase behaviour, interests and most favourited brands.<br/></p>
+                        <p>‍<br/></p>
+                        <h3>A delightful, consistent consumer experience</h3>
+                        <p>To ensure a proper design system is in place to reduce technical debt, and give our consumers a better, consistent experience.<br/></p>
                     </div>
                 </div>
             </div>
@@ -463,7 +462,7 @@
         </div>
     </div>
     <div class="footer">
-      <!--  <div class="container">
+        <!--<div class="container">
             <div class="footer-wrapper"><a href="/" class="footer-brand w-inline-block"><img src="https://assets-global.website-files.com/60c5f64abe141da7260da0b9/613ff547f536e40903b0d7f2_256.webp" loading="lazy" width="56" alt=""/></a>
                 <div class="footer-content">
                     <div id="w-node-_65ba4e28-b974-09aa-c4f7-ae432dfa3be1-72a3612f" class="footer-block">
@@ -485,13 +484,8 @@
                 </div>
                 <div class="footer-2-right">
                     <ul role="list" class="social-icons-list w-list-unstyled">
-                        <li class="list-item"><a href="https://youtube.com/c/rachelhow" target="_blank" class="footersocialicons w-inline-block"><img src="https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60cee337d1b31b70458c00ae_youtube.svg" alt="Youtube" class="social-icon"/></a></li>
-                        <li
-                            class="list-item"><a href="https://twitter.com/rachelhxw" target="_blank" class="footersocialicons w-inline-block"><img src="https://assets-global.website-files.com/5f55d7011f80e60157323594/5f55d7029dcf98cddb967648_twitter.svg" alt="" class="social-icon"/></a></li>
-                            <li
-                                class="list-item"><a href="https://www.linkedin.com/in/rachelhow" target="_blank" class="footersocialicons w-inline-block"><img src="https://assets-global.website-files.com/5f55d7011f80e60157323594/5f55d7029dcf9831ed967645_linkedin.svg" alt="" class="social-icon"/></a></li>
-                                <li
-                                    class="list-item"><a href="https://instagram.com/rachelhxw" target="_blank" class="footersocialicons w-inline-block"><img src="https://assets-global.website-files.com/5f55d7011f80e60157323594/5f55d7029dcf989bd996766e_instagram.svg" alt="" class="social-icon"/></a></li>
+                       <li class="list-item"><a href="https://www.linkedin.com/in/pearl-b-a702491a9/" target="_blank" class="footersocialicons w-inline-block"><img src="https://assets-global.website-files.com/5f55d7011f80e60157323594/5f55d7029dcf9831ed967645_linkedin.svg" alt="" class="social-icon"/></a></li>
+                        
                     </ul>
                 </div>
             </div>
