--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <div class ="portfolio-box">
           <img src="images/portfolio2.jpg" alt="">
           <div class="portfolio-layer">
-            <h4>Sustainability Redesign</h4>
-            <p> Employing UX to make sustainable effort a pleasant experience</p>
+            <h4>Revolutionizing Retail</h4>
+            <p> A Case Study on Employing UX to make sustainable effort a pleasant experience</p>
             <a href = "Upshift.html"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
