--- a/Upshift.html
+++ b/Upshift.html
@@ -101,7 +101,7 @@
     </header>
   
     <div class="section pt-120 pb-0">
-        <div class="container"><img src="https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d33aed5a2c133cfd6f6663_FaveSEA_01.webp" loading="lazy" srcset="https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d33aed5a2c133cfd6f6663_FaveSEA_01-p-500.webp 500w, https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d33aed5a2c133cfd6f6663_FaveSEA_01-p-800.webp 800w, https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d33aed5a2c133cfd6f6663_FaveSEA_01-p-1080.webp 1080w, https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d33aed5a2c133cfd6f6663_FaveSEA_01.webp 2000w"
+        <div class="container"><img src="images\portfolio2.jpg" loading="lazy" "
                 sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 92vw, 78vw" alt="Upshift Swap Shop" class="cs-cover-image" /></div>
         <div class="mw-650 w-container">
             <h1> Revolutionizing Retail: Redesigning Thrift Store's UX for Sustainable Impact</h1>
