--- a/Upshift.html
+++ b/Upshift.html
@@ -103,7 +103,7 @@
     </header>
   
     <div class="section pt-120 pb-0">
-        <div class="container"><img src="" loading="lazy" "
+        <div class="container"><img src="images/fm1.png" loading="lazy" "
                 sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 92vw, 78vw" alt="Upshift Swap Shop" class="cs-cover-image" /></div>
         <div class="mw-650 w-container">
             <h1> Revolutionizing Retail: Redesigning Thrift Store's UX for Sustainable Impact</h1>
@@ -355,7 +355,16 @@
                             <a href="https://www.figma.com/file/XK6ozOfuQzsuocaBo8klYL/Final-Mockups?type=design&node-id=0%3A1&mode=design&t=HZCwUjmIrkhnGwFa-1" target="_blank"> <u>Final Mockups</u> </a>
                         </div>
                     </div>
-                </div><img src="images/wf1.png" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 92vw, 78vw"alt="" class="cs-image" />          
+                </div>
+                <img src="images/fm1.png" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 92vw, 78vw"alt="" class="cs-image" />     
+                <img src="images/fm2.png" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 92vw, 78vw"alt="" class="cs-image" />   
+                <div class = "center-text">
+                    <div class="mw-650">
+                        <div class="caption">
+                            <p><strong>A few screens from my final prototype</strong></p>
+                        </div>
+                    </div>  
+                </div>    
             </div>
 
             <div id="Learning class="cs-offset-section">
@@ -396,19 +405,19 @@
                 <a href="https://pearlbharti05.github.io/spotify.html" class="card-expertise-light design w-inline-block">
                     <div class="service-text-wrapper">
                         <div class="caption all-caps">Ux research case study</div>
-                        <h3 class="heading-m">I design clean experiences that your users will love.</h3>
+                        <h3 class="heading-m">Orchestrating Spotify’s Future Tune
+                            Navigating from Insights to Brief</h3>
                         <div class="work-textlink-copy">
                             <div class="text-link">See my work</div><img src="https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60ca1816e0cff7af54bdd831_arrow-right-circle.svg" loading="lazy" alt="Arrow right" /></div>
-                    </div><img src="https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d1d2c28f657c1330eacf18_phoneTablet.webp" loading="lazy" sizes="(max-width: 479px) 62vw, (max-width: 767px) 58vw, (max-width: 991px) 67vw, 54vw" srcset="https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d1d2c28f657c1330eacf18_phoneTablet-p-500.webp 500w, https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d1d2c28f657c1330eacf18_phoneTablet.webp 768w"
-                        alt="" class="work-featureimage design" /></a>
-                <a href="/webflow" class="card-expertise-light webflow w-inline-block">
+                    </div><img src="images/newspot.png" loading="lazy" sizes="(max-width: 479px) 62vw, (max-width: 767px) 58vw, (max-width: 991px) 67vw, 54vw" alt="" class="work-featureimage design" /></a>
+                <a href="https://medium.com/@pbharti_59193" class="card-expertise-light webflow w-inline-block">
                     <div class="service-text-wrapper">
-                        <div class="caption all-caps">WEBFLOW / FRAMER</div>
-                        <h3 class="heading-m">I build high quality websites at warp speed.</h3>
+                        <div class="caption all-caps">MY BLOGS</div>
+                        <h3 class="heading-m">See my journey as a UX Designer unfold through my blogs</h3>
                         <div class="work-textlink-copy">
-                            <div class="text-link">How I help</div><img src="https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60ca1816e0cff7af54bdd831_arrow-right-circle.svg" loading="lazy" alt="Arrow right" /></div>
-                    </div><img src="https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d1d2c3ad415774f138af15_iMac.webp" loading="lazy" sizes="(max-width: 479px) 78vw, (max-width: 767px) 66vw, (max-width: 991px) 84vw, 68vw" srcset="https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d1d2c3ad415774f138af15_iMac-p-500.webp 500w, https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60d1d2c3ad415774f138af15_iMac.webp 820w"
-                        alt="" class="work-featureimage webflow" /></a>
+                            <div class="text-link">See my work</div><img src="https://assets-global.website-files.com/60c5f64abe141da7260da0b9/60ca1816e0cff7af54bdd831_arrow-right-circle.svg" loading="lazy" alt="Arrow right" /></div>
+                    </div><img src="images/Medium-logo-Photoroom.png-Photoroom.png" loading="lazy" sizes="(max-width: 479px) 78vw, (max-width: 767px) 66vw, (max-width: 991px) 84vw, 68vw" alt="" class="work-featureimage webflow" />
+                </a>
             </div>
         </div>
     </div>
