--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       
       <div class="portfolio-container">
         <div class ="portfolio-box">
-          <img src="images/portfolio1.jpg" alt="">
+          <img src="images/newspot.png" alt="">
           <div class="portfolio-layer">
             <h4>Orchestrating Spotify’s Future Tune </h4>
             <p>Navigating from Insights to Brief</p>
@@ -93,7 +93,7 @@
         </div>
 
         <div class ="portfolio-box">
-          <img src="images/portfolio2.jpg" alt="">
+          <img src="images/newup.png" alt="">
           <div class="portfolio-layer">
             <h4>Revolutionizing Retail</h4>
             <p> A Case Study on Employing UX to make sustainable effort a pleasant experience</p>
@@ -103,11 +103,11 @@
 
 
         <div class ="portfolio-box">
-          <img src="images/portfolio6.jpg" alt="">
+          <img src="images\Medium-logo-Photoroom.png-Photoroom.png" alt="">
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p> Kuch likh fir se</p>
-            <a href = "#"><i class='bx bx-link-external'></i></a>
+            <h4>My Blogs</h4>
+            <p> See my journey as a UX Designer unfold through my blogs</p>
+            <a href = "https://medium.com/@pbharti_59193"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
