--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
         <div class ="portfolio-box">
-          <img src="images\Medium-logo-Photoroom.png-Photoroom.png" alt="">
+          <img src="images\medium.png" alt="">
           <div class="portfolio-layer">
             <h4>My Blogs</h4>
             <p> See my journey as a UX Designer unfold through my blogs</p>
