--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- about section design -->
     <section class="about" id ="about">
       <div class="about-img">
-        <img src ="images/about.png" alt="">      
+        <img src ="images/ab .png" alt="">      
       </div>
 
       <div class="about-content">
