--- a/Upshift.html
+++ b/Upshift.html
@@ -198,7 +198,7 @@
                 <div class="mw-650">
                     <h2>Problem</h2>
                     <div class="styled-rich-text w-richtext">
-                        <p>Getting hold of sustainable yet affordable items is not easy in this day and economy. It is a rarity to find affordable yet high quality items online. Upshift Swap Shop is a one stop stop for it. Although, it poses the issue of a low impact online presence.</p>
+                        <p>Getting hold of sustainable yet affordable items is not easy in this day and economy. It is a rarity to find affordable yet high quality items online. Upshift Swap Shop is a one stop shop for it. Although, it poses the issue of a low impact online presence.</p>
                         <p>‍<br/></p>
                     </div>
                 </div>
@@ -230,7 +230,8 @@
                             <h2>Lacks a pull factor</h2>
                         </div>
                         <p>The features, copywriting and visual elements do not speak to the brand. They lack a pull-factor to attract customers</p>
-                        
+                        <div class="caption mt-16">EXAMPLE</div>
+                        <p></p>
                     </div>
                 </div>
                 <div class="mw-650">
@@ -280,7 +281,7 @@
                 <div class="mw-650">
                     <h2>Task Flows</h2>
                     <div class="styled-rich-text w-richtext">
-                        <p>With a very raw design idea in my mind, I proceeded mapping out task flows to give some physical form to my ideas. </p>
+                        <p>With a very raw design idea in my mind, I proceeded to map out my initial idea of task flows to give it a physical form. The initial form was heavily infuenced by websites and had a plan very similar to many retail sites.</p>
                         <p>I mapped up <strong>5 task flow</strong> for starters.</p>
                         <div class="caption">
                             <a href="https://www.figma.com/file/WBHTJxsRX8CFGhx7d2i3su/Assignment-4?type=whiteboard&node-id=9%3A79&t=pqkildZElD2LZOZt-1" target="_blank"><p> <strong>Link to Task Flows</strong></u> </p></a>
@@ -299,7 +300,7 @@
                 <div class="mw-650">
                     <h2>Screen Design</h2>
                     <div class="styled-rich-text w-richtext">
-                        <p>To bring about more completeness to my designs yet leaving scope for change and adjustments given the incipient stage, I roughly sketched screen designs, <strong>free-hand</strong> to <strong>draw focus to elements and not the spatial structure</strong>.</p>
+                        <p>To bring about more completeness to my designs yet leaving scope for change and adjustments given the incipient stage, I roughly sketched screen designs. I very visibly changed the layout of the screen with the socials at the bottom, the icon and the navbar on top.</p>
                     </div>
                 </div><img src="images/sd1.png" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 92vw, 78vw"alt="" class="cs-image" />
                 <img src="images/sd21.png" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 92vw, 78vw"alt="" class="cs-image" />
