--- a/Upshift.html
+++ b/Upshift.html
@@ -358,7 +358,8 @@
                     </div>
                 </div><img src="images/wf1.png" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 92vw, 78vw"alt="" class="cs-image" />
                 <img src="images/wf2.png" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 92vw, 78vw"alt="" class="cs-image" />
-                <img src="images/wf3.png" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 92vw, 78vw"alt="" class="cs-image" />           
+                <img src="images/wf3.png" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 92vw, 78vw"alt="" class="cs-image" />
+                <img src="images/wf4.png" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 92vw, 78vw"alt="" class="cs-image" />           
             </div>
             <div id="eval" class="cs-offset-section">
                 <div class="mw-650">
@@ -400,16 +401,16 @@
                 </div>    
             </div>
 
-            <div id="learning"cs-offset-section">
+            <div id="learning" class ="cs-offset-section">
                 <div class="mw-650">
                     <h2>Learnings</h2>
                     <div class="styled-rich-text w-richtext">
                         <ul>
-                            <li><strong>Take it one phase at a time</strong><br>
-                                I learned to break down complicated designs into small, manageable chunks. This eases development and handles discrepancies as I go along.
+                            <li><strong>Be open to change, even at later stages</strong><br>
+                                It took a long while to be able to change my designs after sticking to a couple layout decisions for weeks. As I focused on consistency and making my screen designs look more homely/familiar. I took major shifts in my prototype design towards the end.
                             </li>
-                            <li><strong>Appreciate constructive feedback</strong><br>
-                                I learned how to observe and learn from past flaws, thanks to all the feedbacks. This helped me progress iteratively.
+                            <li><strong>Visual Design and Branding</strong><br>
+                                I learnt to explore principles of visual design, including color theory, typography, and imagery selection and to develop a cohesive visual identity that reflects the thrift store's brand values and resonates with its target audience.
                             </li>
                             <li>
                                 <strong>Having a solid problem statement</strong><br>
