--- a/Upshift.html
+++ b/Upshift.html
@@ -384,9 +384,9 @@
                 <div class="mw-650">
                     <h2>Final Mockups</h2>
                     <div class="styled-rich-text w-richtext">
-                        <p> The final mockups are as below.</p>
+                        <p>The culmination of my design journey lies in the latest mockups, born from a series of refinements initiated from a dull, monochromatic website. Now, it boasts a vibrant pastel color scheme, reflecting the playful essence of Upshift Swap Shop. Additionally, various features have been integrated to enhance online engagement, including personalized gift options and a loyalty points system, among others.</p>
                         <div class="caption">
-                            <a href="https://www.figma.com/file/XK6ozOfuQzsuocaBo8klYL/Final-Mockups?type=design&node-id=0%3A1&mode=design&t=HZCwUjmIrkhnGwFa-1" target="_blank"> <u>Final Mockups</u> </a>
+                            <a href="https://www.figma.com/file/FO6j53wctlwBoMdDa8PJY5/THE-IT-FILE?type=design&node-id=0%3A1&mode=design&t=0uM2NdZ0BmppCUXD-1" target="_blank"> <u>Final Mockups</u> </a>
                         </div>
                     </div>
                 </div>
@@ -421,7 +421,7 @@
                     </div>
                           
             </div>
-            <div id="future"cs-offset-section">
+            <div id="future" class ="cs-offset-section">
                 <div class="mw-650">
                     <h2>Future</h2>
                     <div class="styled-rich-text w-richtext">
