--- a/spotify.html
+++ b/spotify.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Upshift Swap Shop Case Study | Pearl Bharti</title>
-    <meta content="Upshift Swap Shop" property="og:title" />
+    <title>Spotify User Research | Pearl Bharti</title>
+    <meta content="Spotify" property="og:title" />
     <link href="https://assets-global.website-files.com/60c5f64abe141da7260da0b9/css/rachel-how.webflow.113d3075a.min.css" rel="stylesheet" type="text/css" />
     <style>
         @media (min-width:992px) {
@@ -103,31 +103,31 @@
     </header>
   
     <div class="section pt-120 pb-0">
-        <div class="container"><img src="images/fm1.png" loading="lazy" "
+        <div class="container"><img src="images/" loading="lazy" "
                 sizes="(max-width: 479px) 90vw, (max-width: 767px) 93vw, (max-width: 991px) 92vw, 78vw" alt="Upshift Swap Shop" class="cs-cover-image" /></div>
         <div class="mw-650 w-container">
-            <h1> Revolutionizing Retail: Redesigning Thrift Store's UX for Sustainable Impact</h1>
+            <h1> Orchestrating Spotify’s Future Tune — Navigating from Insights to Brief</h1>
             <div class="w-layout-grid cs-overview">
                 <div>
                     <div class="caption all-caps">Timeline</div>
-                    <p>Jan 2024 - Present</p>
+                    <p>Oct 2023 - Dec 2023</p>
                 </div>
                 <div>
                     <div class="caption all-caps">TEAM</div>
-                    <p>Pearl Bharti</p>
+                    <p>Pearl Bharti <br> Vaishnavi Kale</p>
                 </div>
                 <div>
                     <div class="caption all-caps">SKILLS</div>
-                    <p>Brainstorming <br> Storyboarding <br> Task Flows <br> Wireframes <br> Design Systems <br> Paper Prototype <br> Heuristic Evaluation <br> Interactive Mockups</p>
+                    <p>Brainstorming <br> Competitor Analysis <br> User Survey <br> Contextual Inquiry <br> User Interviews <br> Affinity Diagrams<br> User Personas <br> User Journey Mapping</p>
                 </div>
                 <div>
                     <div class="caption all-caps">TOOLS</div>
-                    <p>Figma <br> Miro</p>
+                    <p>Figma <br> Miro <br>Freeform<br> Qualtrics <br>FigJam</p>
                 </div>
                 
                 <div>
                     <div class="caption all-caps">MY ROLE</div>
-                    <p>UX Designer</p>
+                    <p>Lead UX Researcher</p>
                 </div>
             </div>
         </div>
