website up again - about

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </section>
 
     <!-- about section design -->
-    <section class="about" id ="about">
+    <!-- <section class="about" id ="about"> 
       <div class="about-img">
         <img src ="images/ab .png" alt="">      
       </div>
@@ -76,7 +76,7 @@
         <p>Explore my portfolio, a testament to my commitment to crafting captivating, user-centric designs that transcend expectations, redefining the essence of seamless digital interaction with data-informed decisions.</p>
         <a href="#" class="btn">Read More</a>
       </div>
-    </section>
+    </section>-->
 
     <!-- portfolio section design -->
     <section class="portfolio" id="portfolio">
@@ -88,7 +88,7 @@
           <div class="portfolio-layer">
             <h4>Orchestrating Spotify’s Future Tune </h4>
             <p>Navigating from Insights to Brief</p>
-            <a href = "spotify.html"><i class='bx bx-link-external'></i></a>
+            <a href = "https://medium.com/design-bootcamp/orchestrating-spotifys-future-tune-navigating-from-insights-to-brief-20e62ea388de"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
